--- a/configure_openscap.yml
+++ b/configure_openscap.yml
@@ -7,11 +7,17 @@
     - scap_client
 
   tasks:
+  - name: Ensure proper version of rubygem-foreman_scap_client version to 0.5.1-1.1.el7sat
+    ansible.builtin.yum:
+      name: rubygem-foreman_scap_client-0.5.1-1.1.el7sat
+      state: present
+      allow_downgrade: true
+
   - name: Randomized startup delay...
-    pause: seconds="{{ 5 | random }}"
+    ansible.builtin.pause: seconds="{{ 5 | random }}"
 
   - name: "Run SCAP Scan"
-    shell: "/usr/bin/foreman_scap_client {{ item.id }}"
+    ansible.builtin.shell: "/usr/bin/foreman_scap_client {{ item.id }}"
     loop: "{{ policy }}"
     when: policy_scan == 'all' or item.name in policy_scan
 ...
