Move openscap client package install to pre_tasks

--- a/configure_openscap.yml
+++ b/configure_openscap.yml
@@ -3,21 +3,20 @@
   become: yes
   vars:
     policy_name: all
+  pre_tasks:
+    - name: Ensure proper version of rubygem-foreman_scap_client version to 0.5.1-1.1.el7sat
+      ansible.builtin.yum:
+        name: rubygem-foreman_scap_client-0.5.1-1.1.el7sat
+        state: present
+        allow_downgrade: true
   roles:
     - scap_client
-
   tasks:
-  - name: Ensure proper version of rubygem-foreman_scap_client version to 0.5.1-1.1.el7sat
-    ansible.builtin.yum:
-      name: rubygem-foreman_scap_client-0.5.1-1.1.el7sat
-      state: present
-      allow_downgrade: true
+    - name: Randomized startup delay...
+      ansible.builtin.pause: seconds="{{ 5 | random }}"
 
-  - name: Randomized startup delay...
-    ansible.builtin.pause: seconds="{{ 5 | random }}"
-
-  - name: "Run SCAP Scan"
-    ansible.builtin.shell: "/usr/bin/foreman_scap_client {{ item.id }}"
-    loop: "{{ policy }}"
-    when: policy_scan == 'all' or item.name in policy_scan
+    - name: "Run SCAP Scan"
+      ansible.builtin.shell: "/usr/bin/foreman_scap_client {{ item.id }}"
+      loop: "{{ policy }}"
+      when: policy_scan == 'all' or item.name in policy_scan
 ...
