Switch to utilization of dynamic_inventory_group var from job template survey.

--- a/configure_openscap.yml
+++ b/configure_openscap.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: "{{ HOSTS }}"
+- hosts: "{{ dynamic_inventory_group | default(omit) }}"
   become: yes
   strategy: free
   gather_facts: true
