--- a/group_vars/control/worflow_job_templates.yml
+++ b/group_vars/control/worflow_job_templates.yml
@@ -507,7 +507,8 @@ controller_workflows:
         extra_data:
           env: Dev
           content_view: RHEL7
-        success_nodes: Promote Content View
+        success_nodes:
+          - Promote Content View
       - identifier: Promote Content View
         unified_job_template: SATELLITE / RHEL - Promote Content View
         organization: Default
@@ -516,7 +517,8 @@ controller_workflows:
           content_view: RHEL7
           current_lifecycle_environment: RHEL7_Dev
           lifecycle_environment: RHEL7_QA
-        success_nodes: Publish Content View 2
+        success_nodes:
+          - Publish Content View 2
       - identifier: Publish Content View 2
         unified_job_template: SATELLITE / RHEL - Publish Content View
         organization: Default
