--- a/server_patch.yml
+++ b/server_patch.yml
@@ -1,12 +1,14 @@
 ---
 - name: Patch/Update OS 
   hosts: "{{ dynamic_inventory_group | default(omit) }}"
+  strategy: free
   gather_facts: false
   become: true
   vars:
     update_check_only: true
     include_kernel_updates: true
     exclude_package_list: []
+    include_startup_delay: false
   pre_tasks:
     - name: Register output of 'yum repolist all'
       ansible.builtin.shell: |
@@ -31,6 +33,13 @@
       ansible.builtin.set_fact:
         exclude_package_list: "kernel*"
       when: not include_kernel_updates
+
+    - name: Randomized startup delay...
+      when: include_startup_delay
+      ansible.builtin.command: |
+        python3 -c 'import time;import random;zzzzz=random.uniform(10.0,60.0);time.sleep(zzzzz);print(zzzzz)'
+      delegate_to: localhost
+      connection: local
 
     - name: Update EL 7 OS to latest packages available
       ansible.builtin.yum:
