--- a/set_instance_tags.yml
+++ b/set_instance_tags.yml
@@ -3,15 +3,15 @@
   connection: local
   tasks:
   - name: "Get instance details"
-    import_role:
+    ansible.builtin.import_role:
       name: ec2_node_tools
       tasks_from: get_instance_details
 
-  - set_fact:
+  - ansible.builtin.set_fact:
       host_ec2_instance_id: {}
 
   - name: "Set facts based on individual host's ec2 instance_id"
-    set_fact:
+    ansible.builtin.set_fact:
       host_ec2_instance_id: >
         {{
           host_ec2_instance_id |
@@ -24,7 +24,7 @@
     loop: "{{ lookup('dict', group_tag_map) }}"
     when: instances_details is not none
 
-  - debug:
+  - ansible.builtin.debug:
       msg:
         - "Instance ID ==> {{ host_ec2_instance_id[item.key] }}"
         - "Node ==> {{ item.key }}"
@@ -35,7 +35,7 @@
       - display_debug_output
 
   - name: "Populate EC2 instance tags"
-    ec2_tag:
+    amazon.aws.ec2_tag:
       region: "{{ ec2_region }}"
       resource: "{{ host_ec2_instance_id[item.key] }}"
       state: present
