--- a/server_patch.yml
+++ b/server_patch.yml
@@ -4,7 +4,6 @@
   strategy: free
   gather_facts: false
   become: true
-  strategy: free
   vars:
     update_check_only: true
     include_kernel_updates: true
@@ -34,12 +33,6 @@
       ansible.builtin.set_fact:
         exclude_package_list: "kernel*"
       when: include_kernel_updates == 'no'
-
-    - name: Randomized startup delay...
-      ansible.builtin.command: |
-        python3 -c 'import time;import random;zzzzz=random.uniform(10.0,60.0);time.sleep(zzzzz);print(zzzzz)'
-      delegate_to: localhost
-      connection: local
 
     - name: Randomized startup delay...
       when: include_startup_delay
@@ -84,7 +77,7 @@
     - name: Reboot server
       ansible.builtin.reboot:
       register: reboot_result
-      when: include_kernel_updates == 'yes' and not update_check_only
+      when: include_kernel_updates and not update_check_only 
 
     - name: Wait for connection...
       ansible.builtin.wait_for_connection:
