--- a/query_satellite_resource_info_hosts_set_instance_tags.yml
+++ b/query_satellite_resource_info_hosts_set_instance_tags.yml
@@ -10,25 +10,25 @@
       resource: hosts
     register: resource_info_hosts_result
 
-  - debug:
+  - ansible.builtin.debug:
       msg: "{{ resource_info_hosts_result | to_json | from_json | json_query(ansible_host_name_query) }}"
     vars:
       ansible_host_name_query: "resources[?starts_with(name, 'node')].name"
     when: display_debug_output
 
   - name: "Get instance details"
-    import_role:
+    ansible.builtin.import_role:
       name: ec2_node_tools
       tasks_from: get_instance_details
 
-  - set_fact:
+  - ansible.builtin.set_fact:
       host_satellite_lifecycle_env: {}
       host_satellite_content_view: {}
       host_satellite_os: {}
       host_ec2_instance_id: {}
 
   - name: "Set facts based on individual host's LE, CV, OS from Satellite and ec2 instance_id"
-    set_fact:
+    ansible.builtin.set_fact:
       host_satellite_lifecycle_env: >
         {{
           host_satellite_lifecycle_env |
@@ -59,8 +59,8 @@
         }}
     vars:
       ansible_host_name_query: "resources[?starts_with(name, 'node')].name"
-      ansible_specific_host_name_le_query: "resources[?contains(['{{ item }}'], name)].content_facet_attributes.lifecycle_environment_name | [0]"
-      ansible_specific_host_name_cv_query: "resources[?contains(['{{ item }}'], name)].content_facet_attributes.content_view_name | [0]"
+      ansible_specific_host_name_le_query: "resources[?contains(['{{ item }}'], name)].content_facet_attributes.lifecycle_environment.name | [0]"
+      ansible_specific_host_name_cv_query: "resources[?contains(['{{ item }}'], name)].content_facet_attributes.content_view.name | [0]"
       ansible_specific_host_name_os_query: "resources[?contains(['{{ item }}'], name)].operatingsystem_name | [0]"
       ansible_instance_id_query: "instances[?contains(['{{ item.split('.')[0] | lower }}'], tags.short_name)].instance_id | [0]"
     with_items: "{{ resource_info_hosts_result | to_json | from_json | json_query(ansible_host_name_query) | list }}"
@@ -69,7 +69,7 @@
   - name: "Populate EC2 instance tags that reflect current host's LE, CV, OS state on Satellite"
     vars:
       ansible_host_name_query: "resources[?starts_with(name, 'node')].name"
-    ec2_tag:
+    amazon.aws.ec2_tag:
       region: "{{ ec2_region }}"
       resource: "{{ host_ec2_instance_id[item] }}"
       state: present
@@ -80,3 +80,4 @@
         NodeName: "{{ item }}"
     with_items: "{{ resource_info_hosts_result | to_json | from_json | json_query(ansible_host_name_query) | list }}"
     when: instances_details is not none
+...
