--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -938,6 +938,35 @@ controller_templates:
       full_storage_device_name: /dev/nvme0n1
       perform_resize: true
 
+  - name: UTILITY / Extend logical volumes and filesystems
+    project: Automated Management
+    playbook: filesystem_extend.yml
+    inventory: Workshop Inventory
+    credentials:
+      - Workshop Credential
+    survey_enabled: true
+    survey:
+      name: ''
+      description: ''
+      spec:
+        - question_name: Select inventory group
+          question_description: Use to limit job to selected inventory host group.
+          type: multiplechoice
+          default: ''
+          variable: dynamic_inventory_group
+          choices: "{{ hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^RHEL.*$') | map(attribute='name') +
+                       hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^CentOS.*$') | map(attribute='name') +
+                       hostvars['satellite.example.com']['satellite_lifecycle_environments'] | selectattr('name', 'match', '^OL.*$') | map(attribute='name') +
+                       hostvars['satellite.example.com']['all_lifecycle_environments'] | selectattr('name', 'match', 'all') | map(attribute='name') }}"
+          required: true
+    ask_limit_on_launch: true
+    ask_variables_on_launch: true
+    extra_vars:
+      filesystem_extend_volumes:
+        - vg: VolGroup00
+          lv: varVol
+          size: 8G
+
   - name: Z / SETUP / Miscellaneous host config
     project: Automated Management
     playbook: misc_host_config.yml
