--- a/group_vars/control/worflow_job_templates.yml
+++ b/group_vars/control/worflow_job_templates.yml
@@ -239,6 +239,14 @@ controller_workflows:
         limit: centos7,rhel7
         all_parents_must_converge: false
         always_nodes:
+          - Extend logical volumes and filesystems
+      - identifier: Extend logical volumes and filesystems
+        unified_job_template: UTILITY / Extend logical volumes and filesystems
+        organization: Default
+        all_parents_must_converge: false
+        extra_data:
+          dynamic_inventory_group: "all"
+        always_nodes:
           - Register CentOS7 nodes to Satellite AK CentOS7_Dev
           - Workflow node delay
       - identifier: Workflow node delay
