Change to group name with app_stack_name combined with Ansible_Group.

--- a/group_vars/control/inventory_sources.yml
+++ b/group_vars/control/inventory_sources.yml
@@ -38,8 +38,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -69,8 +69,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -102,8 +102,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -133,8 +133,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -164,8 +164,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -197,8 +197,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -228,8 +228,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -258,8 +258,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
@@ -290,8 +290,8 @@ controller_inventory_sources:
           separator: ''
         - prefix: os
           key: tags['satellite_operatingsystem_name']
-        - prefix: AnsibleGroup
-          key: tags['AnsibleGroup']
+        - key: tags['app_stack_name'] ~ '_' ~ tags['AnsibleGroup']
+          separator: ''
       compose:
         # set the ansible_host variable to connect with the private IP address without changing the hostname
         ansible_host: private_ip_address
