--- a/set_instance_tags_ol7.yml
+++ b/set_instance_tags_ol7.yml
@@ -29,6 +29,7 @@
         - "Instance ID ==> {{ host_ec2_instance_id[item.key] }}"
         - "Node ==> {{ item.key }}"
         - "Environment ==> {{ item.value }}"
+        - "app_stack_name ==> {{ app_stack_name }}"
     loop: "{{ lookup('dict', environment_tag_map) }}"
     when:
       - instances_details is not none
@@ -44,6 +45,7 @@
         Environment: "{{ item.value }}"
         ContentView: "OL7"
         satellite_operatingsystem_name: "OracleLinux_7_9"
+        app_stack_name: "{{ app_stack_name }}"
     loop: "{{ lookup('dict', environment_tag_map) }}"
     when: instances_details is not none
 ...
