--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -576,7 +576,7 @@ controller_templates:
   - name: CONVERT2RHEL / 98 - Three Tier App deployment
     description: Deploy three tier app
     project: Three Tier App / Dev
-    playbook: Configure_3TA_AWS.yml
+    playbook: Configure_3TA_AWS_research.yml
     inventory: EC2 Dynamic Inventory
     credentials:
       - Workshop Credential
@@ -587,6 +587,18 @@ controller_templates:
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
+    survey_enabled: true
+    survey:
+      name: 'Three Tier App deployment survey'
+      description: 'Three Tier App deployment survey'
+      spec:
+        - question_name: Choose application stack name
+          type: multiplechoice
+          variable: app_stack_name
+          choices:
+            - stack01
+            - stack02
+          required: true
 
   - name: CONVERT2RHEL / 99 - Three Tier App smoke test
     description: Smoke test three tier app
