--- a/host_vars/satellite.example.com/repositories.yml
+++ b/host_vars/satellite.example.com/repositories.yml
@@ -10,14 +10,14 @@ satellite_products:
     repositories:
       - name: CentOS-7 - Base RPMs x86_64
         content_type: yum
-        url: http://mirror.centos.org/centos/7/os/x86_64/
+        url: https://vault.centos.org/7.9.2009/os/x86_64/
         gpg_key: RPM-GPG-KEY-CentOS-7
       - name: CentOS-7 - Updates RPMs x86_64
         content_type: yum
-        url: http://mirror.centos.org/centos/7/updates/x86_64/
+        url: https://vault.centos.org/7.9.2009/updates/x86_64/
       - name: CentOS-7 - Extras RPMs x86_64
         content_type: yum
-        url: http://mirror.centos.org/centos/7/extras/x86_64/
+        url: https://vault.centos.org/7.9.2009/extras/x86_64/
   - name: Oracle Linux 7
     repositories:
       - name: Oracle Linux 7Server Latest x86_64
