--- a/misc_host_config.yml
+++ b/misc_host_config.yml
@@ -6,12 +6,21 @@
   become: true
   force_handlers: true
   tasks:
-    - name: Configure EL7 systems
-      when: ansible_distribution_major_version | int == 7
+    - name: Configure RHEL7 systems
+      when:
+        - "ansible_distribution == 'RedHat'"
+        - "ansible_distribution_major_version | int == 7"
       ansible.builtin.import_tasks: misc_host_config_rhel7.yml
     - name: Configure RHEL8 systems
-      when: ansible_distribution_major_version | int == 8
+      when:
+        - "ansible_distribution == 'RedHat'"
+        - "ansible_distribution_major_version | int == 8"
       ansible.builtin.import_tasks: misc_host_config_rhel8.yml
+    - name: Configure CentOS7 systems
+      when:
+        - "ansible_distribution == 'CentOS'"
+        - "ansible_distribution_major_version | int  == 7"
+      ansible.builtin.import_tasks: misc_host_config_centos7.yml
 
   handlers:
     - name: "Rebuild grub.cfg"
