--- a/group_vars/control/job_templates.yml
+++ b/group_vars/control/job_templates.yml
@@ -45,6 +45,7 @@ controller_templates:
     extra_vars:
       org_id: "Default_Organization"
       product_name_or_regex: "Community Enterprise OS 7"
+      include_offset_task_delay: true
     notification_templates_started: Telemetry
     notification_templates_success: Telemetry
     notification_templates_error: Telemetry
